# bfrpg_mud

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  README.md  TEST_ISSUES.md  TODO.md  add_admin_column.py  alembic.ini  check_db.py  create_tables.py  create_test_user.py  docker-compose.yml  pyproject.toml  pytest.ini  rename_files.py  requirements.txt  seed_items.py  setup.cfg  setup.py  test_api.py  test_character.py  test_character_creation.py  test_character_debug.py  test_character_state.py  test_inventory_api.py  test_orm.py  test_register.py
.cursor/rules/: developmentrules.mdc  (+1 more)
alembic/: env.py
app/: __init__.py  command_handlers.py  commands.py  config.py  constants.py  database.py  main.py  models.py  schemas.py  utils.py
docs/: DEPLOYMENT.md  INVENTORY_IMPLEMENTATION.md  INVENTORY_SYSTEM.md  NEXT_STEPS.md  PROJECT_REQUIREMENTS.md  ROADMAP.md  ROOM_SYSTEM_PLAN.md  UI_IMPLEMENTATION.md  UI_WIREFRAME.md  hirelings.md  inventory.md
migrations/: env.py
scripts/: create_starter_area.py  docker-test.sh  setup_game.py  start-dev.sh
static/: forgot-password.html  game.html  index.html  login.html  register.html  reset-password.html  websocket-test.html
tests/: README.md  conftest.py  factories.py  test_auth.py  test_authentication.py  test_basic_hirelings.py  test_character_creation.py  test_command_system.py  test_config.py  test_game_api_integration.py  test_game_commands.py  test_game_ui.py  test_hirelings.py  test_inventory.py  test_mud_api.py  test_ui.py  test_ui_integration.py  test_user_flow.py  test_users.py
(+98 files in other folders)
